Polished the API
Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
-project(HelloWorld)
+project(OllamaLib)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-find_package(OpenSSL COMPONENTS SSL Crypto REQUIRED)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(helloworld main.cpp)
-target_compile_options(helloworld PRIVATE -DCPPHTTPLIB_OPENSSL_SUPPORT=1)
-target_link_libraries(helloworld PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+add_subdirectory(ollama)
+
+if (OLLAMALIB_BUILD_EXAMPLE)
+  add_executable(helloworld main.cpp)
+  target_link_libraries(helloworld PRIVATE ollamalib)
+endif ()
