--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(ollama)
+option(
+  OLLAMALIB_BUILD_EXAMPLE
+  "Build the example program."
+  ON)
 
 if (OLLAMALIB_BUILD_EXAMPLE)
   add_executable(assistant main.cpp)
