--- a/ollama/CMakeLists.txt
+++ b/ollama/CMakeLists.txt
@@ -19,7 +19,9 @@ add_library(
   ${CMAKE_CURRENT_LIST_DIR}/function.cpp
   ${CMAKE_CURRENT_LIST_DIR}/function.hpp
   ${CMAKE_CURRENT_LIST_DIR}/function_base.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/function_base.hpp)
+  ${CMAKE_CURRENT_LIST_DIR}/function_base.hpp
+  ${CMAKE_CURRENT_LIST_DIR}/config.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/config.hpp)
 
 target_include_directories(ollamalib PUBLIC ${CMAKE_SOURCE_DIR})
 target_link_libraries(ollamalib PUBLIC mcp-cpp)
