--- a/ollama/CMakeLists.txt
+++ b/ollama/CMakeLists.txt
@@ -23,7 +23,7 @@ add_library(
   ${CMAKE_CURRENT_LIST_DIR}/config.cpp
   ${CMAKE_CURRENT_LIST_DIR}/config.hpp)
 
-target_include_directories(ollamalib PUBLIC ${CMAKE_SOURCE_DIR})
+target_include_directories(ollamalib PUBLIC ${OLLAMLIB_ROOT})
 target_link_libraries(ollamalib PUBLIC mcp-cpp)
 
 if (OLLAMALIB_WITH_OPENSSL)
