--- a/ollama/CMakeLists.txt
+++ b/ollama/CMakeLists.txt
@@ -24,6 +24,7 @@ add_library(
   ${CMAKE_CURRENT_LIST_DIR}/config.hpp)
 
 target_include_directories(ollamalib PUBLIC ${OLLAMLIB_ROOT})
+target_include_directories(ollamalib PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(ollamalib PUBLIC mcp-cpp)
 
 if (OLLAMALIB_WITH_OPENSSL)
