**Refactor client architecture and utilities**
- Introduced a new `ClientBase` abstraction that encapsulates all chat, config, and request logic previously handled by `Manager`.
- Added concrete `Client` class that implements the low‑level `ChatImpl` and exposes the public API (`Chat`, `ApplyConfig`, `List`, `GetModelInfo`, etc.).
- Updated `main.cpp` to instantiate and use `ollama::Client` instead of the old `Manager`.
- Created `helpers.hpp` providing a generic `JoinArray` template and a vector stream operator.
- Simplified `macros.hpp` to expose generic flag utilities (`IsFlagSet`, `AddFlagSet`) and removed the old bitwise operator macro.
- Removed the duplicate `JoinArray` implementation from `ollama.hpp`.
- Updated `ollama.cpp` to use the new `Client` implementation and removed all `Manager`‑specific code.
- Updated `ollama.hpp` to expose the new `Client` class and removed the old `Manager` declaration.
- Adjusted `CMakeLists.txt` to compile the new `client_base.cpp`/`client_base.hpp` files.
- Cleaned up unused includes, comments, and legacy code.
- Added `SetHeadersInternal` helper for header configuration.

**Generated by ChatAI Plugin.**

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/ollama/CMakeLists.txt
+++ b/ollama/CMakeLists.txt
@@ -20,6 +20,8 @@ add_library(
   ${CMAKE_CURRENT_LIST_DIR}/function.hpp
   ${CMAKE_CURRENT_LIST_DIR}/function_base.cpp
   ${CMAKE_CURRENT_LIST_DIR}/function_base.hpp
+  ${CMAKE_CURRENT_LIST_DIR}/client_base.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/client_base.hpp
   ${CMAKE_CURRENT_LIST_DIR}/config.cpp
   ${CMAKE_CURRENT_LIST_DIR}/config.hpp)
 
