Compile fix - generate as position indenendent code to prevent the following compile/link error (Archlinux)
```
/usr/bin/ld: lib/libollamalib.a(ollama.cpp.o): warning: relocation against `std::_Function_handler<bool (char const*, unsigned long), httplib::detail::write_content_chunked<httplib::ClientImpl::write_content_with_provider(httplib::Stream&, httplib::Request const&, httplib::Error&) const::{lambda()#1}, httplib::detail::compressor>(httplib::Stream&, std::function<bool (unsigned long, unsigned long, httplib::DataSink&)> const&, httplib::ClientImpl::write_content_with_provider(httplib::Stream&, httplib::Request const&, httplib::Error&) const::{lambda()#1} const&, httplib::detail::compressor&, httplib::Error&)::{lambda(char const*, unsigned long)#1}::operator()(char const*, unsigned long) const::{lambda(char const*, unsigned long)#1}>::_M_manager(std::_Any_data&, std::_Any_data const&, std::_Manager_operation)' in read-only section `.text._ZNSt8functionIFbPKcmEEC2IZZN7httplib6detail21write_content_chunkedIZNKS5_10ClientImpl27write_content_with_providerERNS5_6StreamERKNS5_7RequestERNS5_5ErrorEEUlvE_NS6_10compressorEEEbSA_RKS_IFbmmRNS5_8DataSinkEEERKT_RT0_SF_ENKUlS1_mE_clES1_mEUlS1_mE_vEEOSO_[std::function<bool (char const*, unsigned long)>::function<httplib::detail::write_content_chunked<httplib::ClientImpl::write_content_with_provider(httplib::Stream&, httplib::Request const&, httplib::Error&) const::{lambda()#1}, httplib::detail::compressor>(httplib::Stream&, std::function<bool (unsigned long, unsigned long, httplib::DataSink&)> const&, httplib::ClientImpl::write_content_with_provider(httplib::Stream&, httplib::Request const&, httplib::Error&) const::{lambda()#1} const&, httplib::detail::compressor&, httplib::Error&)::{lambda(char const*, unsigned long)#1}::operator()(char const*, unsigned long) const::{lambda(char const*, unsigned long)#1}, void>(httplib::detail::write_content_chunked<httplib::ClientImpl::write_content_with_provider(httplib::Stream&, httplib:

--- a/ollama/CMakeLists.txt
+++ b/ollama/CMakeLists.txt
@@ -25,7 +25,6 @@ add_library(
   ${CMAKE_CURRENT_LIST_DIR}/config.hpp)
 
 target_compile_options(ollamalib PUBLIC -Wall)
-target_compile_options(ollamalib PRIVATE -fPIC)
 
 target_include_directories(ollamalib PUBLIC ${OLLAMLIB_ROOT})
 target_include_directories(ollamalib PRIVATE ${CMAKE_CURRENT_LIST_DIR})
@@ -37,6 +36,10 @@ if (OLLAMALIB_WITH_OPENSSL)
   if (WIN32)
     target_link_libraries(ollamalib PUBLIC Crypt32)
   endif ()
+endif ()
+
+if (UNIX OR APPLE)
+  set_target_properties(ollamalib PROPERTIES POSITION_INDEPENDENT_CODE ON)
 endif ()
 
 if (WIN32)
