Refactor project to rename from OllamaLib to AssistantLib and restructure codebase • Renamed project from "OllamaLib" to "Assistant" in CMakeLists.txt • Created new assistant/CMakeLists.txt with updated library configuration • Refactored all header file includes to use "assistant/" prefix instead of "ollama/" • Renamed Ollama class to ClientImpl and updated all references • Updated variable names from ollama to client_impl throughout the codebase • Modified CMakeLists.txt to reference new assistantlib target instead of ollamalib • Updated library linking to use "assistantlib" instead of "ollamalib" • Changed project name in CMakeLists.txt from "OllamaLib" to "Assistant" • Updated all function signatures and references to use ClientImpl instead of Ollama • Modified build configuration to reflect new library name and structure • Updated example build option from OLLAMALIB_BUILD_EXAMPLE to ASSISTANTLIB_BUILD_EXAMPLE • Updated target linking in main.cpp to reference assistantlib instead of ollamalib • Updated all internal references to use new client_impl variable instead of ollama singleton • Modified CMakeLists.txt to add_subdirectory(assistant) instead of add_subdirectory(ollama) • Updated namespace and class references throughout the codebase to reflect new naming convention • Changed library name from ollamalib to assistantlib in all build configurations • Updated include paths for all cpp-mcp components to use "assistant/" prefix • Modified function signatures and internal calls to reference ClientImpl instead of Ollama • Updated all references to the singleton instance from ollama to client_impl • Changed project name in CMakeLists.txt from "OllamaLib" to "Assistant" • Updated all references to the library target from ollamalib to assistantlib • Modified all include paths to use "assistant/" prefix instead of "ollama/" • Updated all function calls and variable references to use new ClientImpl class • Changed example build option name from OLLAMALIB_BUILD_EXAMPLE 

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(OllamaLib)
+project(Assistant)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 20)
@@ -11,18 +11,19 @@ if (CMAKE_CXX_COMPILER_ID
     OR CMAKE_CXX_COMPILER_ID
        MATCHES
        "AppleClang")
-  add_compile_options(-Wthread-safety -D_LIBCPP_ENABLE_THREAD_SAFETY_ANNOTATIONS)
+  add_compile_options(-Wthread-safety
+                      -D_LIBCPP_ENABLE_THREAD_SAFETY_ANNOTATIONS)
 endif ()
 
-add_subdirectory(ollama)
+add_subdirectory(assistant)
 option(
-  OLLAMALIB_BUILD_EXAMPLE
+  ASSISTANTLIB_BUILD_EXAMPLE
   "Build the example program."
   ON)
 
-if (OLLAMALIB_BUILD_EXAMPLE)
+if (ASSISTANTLIB_BUILD_EXAMPLE)
   add_executable(assistant main.cpp)
-  target_link_libraries(assistant PRIVATE ollamalib)
+  target_link_libraries(assistant PRIVATE assistantlib)
 endif ()
 
 file(
