Update executable name in CMakeLists.txt
• Renamed executable from 'assistant' to 'assistant-demo' in CMakeLists.txt

** Generated by ChatAI Plugin. **

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ option(
   ON)
 
 if (ASSISTANTLIB_BUILD_EXAMPLE)
-  add_executable(assistant main.cpp)
-  target_link_libraries(assistant PRIVATE assistantlib)
+  add_executable(assistant-demo main.cpp)
+  target_link_libraries(assistant-demo PRIVATE assistantlib)
 endif ()
 
 file(
