Enable TLS support with OpenSSL option in assistant library by default.
• Updated CMakeLists.txt to use consistent variable naming (`ASSISTANTLIB_WITH_OPENSSL` instead of `assistantlib_WITH_OPENSSL`)
• Added status message when TLS support is enabled

** Generated by ChatAI Plugin. **

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,21 @@ if (CMAKE_CXX_COMPILER_ID
                       -D_LIBCPP_ENABLE_THREAD_SAFETY_ANNOTATIONS)
 endif ()
 
-add_subdirectory(assistant)
 option(
   ASSISTANTLIB_BUILD_EXAMPLE
   "Build the example program."
   ON)
 
+option(
+  ASSISTANTLIB_WITH_OPENSSL
+  "Enable TLS support"
+  ON)
+
+if (ASSISTANTLIB_WITH_OPENSSL)
+  message(STATUS "TLS support is enabled")
+endif ()
+
+add_subdirectory(assistant)
 if (ASSISTANTLIB_BUILD_EXAMPLE)
   add_executable(assistant-demo main.cpp)
   target_link_libraries(assistant-demo PRIVATE assistantlib)
