Add Claude client support and test infrastructure
- Introduce ClaudeClient class that extends OllamaClient to support Anthropic's Claude API
- Add CMake options to enable building tests with ASSISTANTLIB_BUILD_TESTS
- Update README.md with project description and usage information
- Refactor client implementation by extracting OllamaClient base class from Client
- Add helper macros for optional assignment with early return
- Update main.cpp to use MakeClient factory function instead of direct Client construction
- Add test infrastructure including googletest submodule and test cases for Claude response parser
- Enhance client interface with improved ChatOptions handling and response callback signature
- Add support for Claude-specific features like thinking and tool use parsing
- Move default URL and headers to config.hpp for better configuration management

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,11 @@ option(
   "Enable TLS support"
   ON)
 
+option(
+  ASSISTANTLIB_BUILD_TESTS
+  "Build tests"
+  OFF)
+
 if (ASSISTANTLIB_WITH_OPENSSL)
   message(STATUS "TLS support is enabled")
 endif ()
@@ -33,6 +38,11 @@ add_subdirectory(assistant)
 if (ASSISTANTLIB_BUILD_EXAMPLE)
   add_executable(assistant-demo main.cpp)
   target_link_libraries(assistant-demo PRIVATE assistantlib)
+endif ()
+
+if (ASSISTANTLIB_BUILD_TESTS)
+  add_subdirectory(submodules/googletest)
+  add_subdirectory(tests)
 endif ()
 
 file(
