Refactor Claude response parser to use callback-based parsing and improve Ollama client integration.
• Renamed client.cpp and client.hpp to ollama_client.cpp and ollama_client.hpp respectively
• Updated CMakeLists.txt to reference new Ollama client files
• Modified claude_response_parser.cpp to use callback-based parsing instead of returning ParserResult struct
• Added ParseResult struct with content field instead of text field

** Generated by ChatAI Plugin. **

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/assistant/CMakeLists.txt
+++ b/assistant/CMakeLists.txt
@@ -11,8 +11,8 @@ add_subdirectory(cpp-mcp)
 
 add_library(
   assistantlib STATIC
-  ${CMAKE_CURRENT_LIST_DIR}/client.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/client.hpp
+  ${CMAKE_CURRENT_LIST_DIR}/ollama_client.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/ollama_client.hpp
   ${CMAKE_CURRENT_LIST_DIR}/claude_client.cpp
   ${CMAKE_CURRENT_LIST_DIR}/claude_client.hpp
   ${CMAKE_CURRENT_LIST_DIR}/mcp_local_process.cpp
