--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
 
-    - name: Checkout CodeLite
+    - name: Checkout assistant
       uses: actions/checkout@v4
 
     - name: cmake --version
