--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Assistant)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_EXTENSIONS OFF)
 set(OLLAMLIB_ROOT ${CMAKE_CURRENT_LIST_DIR})
 
 if (CMAKE_CXX_COMPILER_ID
