--- a/assistant/cpp-mcp/CMakeLists.txt
+++ b/assistant/cpp-mcp/CMakeLists.txt
@@ -11,9 +11,9 @@ target_link_libraries(mcp-cpp PUBLIC ${CMAKE_THREAD_LIBS_INIT})
 target_include_directories(mcp-cpp PUBLIC ${OLLAMLIB_ROOT})
 target_include_directories(mcp-cpp PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 
-if (OLLAMALIB_WITH_OPENSSL)
+if (ASSISTANTLIB_WITH_OPENSSL)
   target_compile_options(mcp-cpp PUBLIC -DCPPHTTPLIB_OPENSSL_SUPPORT=1)
-  target_link_libraries(mcp-cpp PUBLIC OpenSSL::SSL OpenSSL::Crypto)
+  target_link_libraries(mcp-cpp PRIVATE OpenSSL::SSL OpenSSL::Crypto)
 endif ()
 
 if (UNIX OR APPLE)
