Refactor CMake to Handle OpenSSL Dependencies
The build system now performs the OpenSSL discovery at the top‑level CMakeLists instead of in the assistant subdirectory. This removes duplicate `find_package` calls, centralizes optional TLS configuration, and makes the dependency logic clearer.

`assistantlib` was changed to link the OpenSSL libraries as **PRIVATE** rather than **PUBLIC**. This prevents users of the library from automatically inheriting the OpenSSL symbols, keeping the public interface minimal and avoiding unnecessary linkage on platforms that do not use TLS. The example executable (`assistant-demo`) is now explicitly linked against OpenSSL when the `ASSISTANTLIB_WITH_OPENSSL` option is enabled, ensuring the demo can use TLS while keeping the library's interface clean.

Key changes:
- Moved `find_package(OpenSSL ...)` to the root CMakeLists.
- Updated `assistantlib` to link OpenSSL privately.
- Added OpenSSL linking to the demo target when TLS support is enabled.
- Simplified the assistant CMakeLists by removing the now‑redundant find_package block.

* CMake configuration
* Build system
* Linking

** Generated by CodeLite. **

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/assistant/CMakeLists.txt
+++ b/assistant/CMakeLists.txt
@@ -1,12 +1,5 @@
 project(assistantlib)
 
-if (ASSISTANTLIB_WITH_OPENSSL)
-  find_package(
-    OpenSSL
-    COMPONENTS SSL Crypto
-    REQUIRED)
-endif ()
-
 add_subdirectory(cpp-mcp)
 
 add_library(
@@ -34,7 +27,7 @@ target_link_libraries(assistantlib PUBLIC mcp-cpp)
 
 if (ASSISTANTLIB_WITH_OPENSSL)
   target_compile_options(assistantlib PUBLIC -DCPPHTTPLIB_OPENSSL_SUPPORT=1)
-  target_link_libraries(assistantlib PUBLIC OpenSSL::SSL OpenSSL::Crypto)
+  target_link_libraries(assistantlib PRIVATE OpenSSL::SSL OpenSSL::Crypto)
   if (WIN32)
     target_link_libraries(assistantlib PUBLIC Crypt32)
   endif ()
