Add Conditional Compilation Guards for OpenSSL TLS Support
This change introduces conditional compilation to gracefully handle builds
when OpenSSL support is disabled. The verifySSLCertificate method is now
wrapped in preprocessor guards to only compile when CPPHTTPLIB_OPENSSL_SUPPORT
is defined. A warning message has been added to the configuration parser to
inform users when the 'verify_server_ssl' option is specified but OpenSSL
is not available. Additionally, a status message is printed during CMake
configuration when TLS support is explicitly disabled.

* CMakeLists.txt: Add status message for disabled TLS
* assistantlib.hpp: Guard SSL verification method with OpenSSL check
* config.cpp: Warn when SSL config is used without OpenSSL support
* ollama_client.cpp: Conditionally call SSL certificate verification

** Generated by CodeLite. **

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ if (ASSISTANTLIB_WITH_OPENSSL)
       COMPONENTS SSL Crypto
       REQUIRED)
   endif ()
+else ()
+  message(STATUS "TLS support is disabled")
 endif ()
 
 add_subdirectory(assistant)
