Refactor Logging Macros and Rename Demo Executable
Introduce convenience logging macros (OLOG_DEBUG, OLOG_INFO, OLOG_TRACE,
OLOG_WARN, OLOG_ERROR) to simplify logging calls throughout the codebase.
Migrate all existing OLOG(OLogLevel::k*) invocations in main.cpp to use
the new shorthand macros for improved readability.

Convert most stdout informational messages to debug-level log output,
reducing console noise during normal operation. Simplify the prompt
output formatting by removing redundant flush calls.

Rename the example executable from "assistant-demo" to "code-assist" for
a clearer product identity.

* assistant/logger.hpp: Add level-specific logging macros
* main.cpp: Migrate to new logging macros and reduce stdout usage
* CMakeLists.txt: Rename executable target

** Generated by CodeLite. **

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,11 +45,12 @@ endif ()
 
 add_subdirectory(assistant)
 if (ASSISTANTLIB_BUILD_EXAMPLE)
-  add_executable(assistant-demo main.cpp)
+  set(CLI "code-assist")
+  add_executable(${CLI} main.cpp)
   if (ASSISTANTLIB_WITH_OPENSSL)
-    target_link_libraries(assistant-demo PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+    target_link_libraries(${CLI} PRIVATE OpenSSL::SSL OpenSSL::Crypto)
   endif ()
-  target_link_libraries(assistant-demo PRIVATE assistantlib)
+  target_link_libraries(${CLI} PRIVATE assistantlib)
 endif ()
 
 if (ASSISTANTLIB_BUILD_TESTS)
