Refactor CLI Build Into Separate Subdirectory
Move the CLI application build configuration into its own dedicated
subdirectory for better project organization. The main.cpp and utils.hpp
files are relocated to cli/, and a new CMakeLists.txt is created to
handle the CLI target configuration independently.

The root CMakeLists.txt now delegates to the cli subdirectory via
add_subdirectory() when ASSISTANTLIB_BUILD_EXAMPLE is enabled.

* cli/CMakeLists.txt: New build configuration for code-assist executable
* cli/main.cpp: Relocated from project root
* cli/utils.hpp: Relocated from project root
* CMakeLists.txt: Simplified to use add_subdirectory(cli)

** Generated by CodeLite. **

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,12 +45,7 @@ endif ()
 
 add_subdirectory(assistant)
 if (ASSISTANTLIB_BUILD_EXAMPLE)
-  set(CLI "code-assist")
-  add_executable(${CLI} main.cpp)
-  if (ASSISTANTLIB_WITH_OPENSSL)
-    target_link_libraries(${CLI} PRIVATE OpenSSL::SSL OpenSSL::Crypto)
-  endif ()
-  target_link_libraries(${CLI} PRIVATE assistantlib)
+  add_subdirectory(cli)
 endif ()
 
 if (ASSISTANTLIB_BUILD_TESTS)
