--- a/assistant/CMakeLists.txt
+++ b/assistant/CMakeLists.txt
@@ -21,7 +21,9 @@ add_library(
   ${CMAKE_CURRENT_LIST_DIR}/config.cpp
   ${CMAKE_CURRENT_LIST_DIR}/config.hpp
   ${CMAKE_CURRENT_LIST_DIR}/claude_response_parser.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/claude_response_parser.hpp)
+  ${CMAKE_CURRENT_LIST_DIR}/claude_response_parser.hpp
+  ${CMAKE_CURRENT_LIST_DIR}/Process.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/Process.hpp)
 
 target_include_directories(assistantlib PUBLIC ${OLLAMLIB_ROOT})
 target_include_directories(assistantlib PRIVATE ${CMAKE_CURRENT_LIST_DIR})
