--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,10 +13,18 @@ include_directories(${CMAKE_SOURCE_DIR})
 # Create the test executable
 add_executable(test_claude_response_parser test_claude_response_parser.cpp)
 add_executable(test_history test_history.cpp)
+add_executable(test_process test_process.cpp)
 
 # Link libraries
 target_link_libraries(
   test_claude_response_parser
+  PUBLIC assistantlib
+         gtest
+         gtest_main
+         Threads::Threads)
+
+target_link_libraries(
+  test_process
   PUBLIC assistantlib
          gtest
          gtest_main
