Add Streaming Output Support and File Utilities for Process Execution
This commit introduces comprehensive improvements to process execution and adds utility functions for temporary file handling. The changes enable real-time streaming of process output through callbacks and provide helper functions for writing and managing temporary files.

Process execution now supports streaming callbacks that receive output incrementally and can terminate processes by returning false. Both synchronous (RunProcessAndWait) and asynchronous (RunProcessAsync) APIs have been updated to use callback-based output handling instead of buffering all output until completion. The implementation uses non-blocking I/O and polling on both Windows and Unix to capture output as it becomes available.

New file utility functions have been added to helpers.hpp including WriteStringToFile for binary-safe file writing, WriteStringToRandomFile for creating temporary files with unique names, DeleteFileFromDisk for file cleanup, and ScopedFileDeleter as an RAII wrapper for automatic temporary file deletion.

A new Curl transport class has been introduced as an alternative to the existing HTTP client, enabling process-based execution of curl commands. This provides flexibility for different transport mechanisms while maintaining the same ITransport interface.

The Claude response parser has been refactored to improve line-by-line processing with PopLine and PushLineFront methods, replacing the vector-based approach with more efficient string manipulation. Additional validation has been added to ensure complete JSON messages are processed.

The PullModel functionality has been removed from client classes as it was Ollama-specific and not supported across all providers.

* Process execution API (streaming callbacks, non-blocking I/O)
* File utilities (temporary file management, RAII cleanup)
* Curl transport implementation
* Claude response parser (line processing refactor)
* Client interfaces (removed Pul

--- a/assistant/CMakeLists.txt
+++ b/assistant/CMakeLists.txt
@@ -20,6 +20,8 @@ add_library(
   ${CMAKE_CURRENT_LIST_DIR}/function_base.hpp
   ${CMAKE_CURRENT_LIST_DIR}/config.cpp
   ${CMAKE_CURRENT_LIST_DIR}/config.hpp
+  ${CMAKE_CURRENT_LIST_DIR}/Curl.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/Curl.hpp
   ${CMAKE_CURRENT_LIST_DIR}/claude_response_parser.cpp
   ${CMAKE_CURRENT_LIST_DIR}/claude_response_parser.hpp
   ${CMAKE_CURRENT_LIST_DIR}/Process.cpp
