Refactor Error Handling to Use Event-Based SSE Parsing
The error handling mechanism was changed from throwing exceptions to using
the existing Server-Sent Events (SSE) parsing flow. Error messages are now
parsed as SSE events and surfaced through the callback interface with a new
`StopReason::error` indicator, making error handling consistent with other
response types.

Additionally, build system configuration was updated to unify TLS-related
options and properly scope OpenSSL linkage.

* Error parsing now returns a ParseResult with stop_reason set to error
* SSE test fixtures updated to use proper event-based format
* SSL verification method guarded by CPPHTTPLIB_OPENSSL_SUPPORT
* CMake options now recognize both ASSISTANTLIB_WITH_OPENSSL and ENABLE_TLS flags
* OpenSSL linkage changed from PRIVATE to PUBLIC scope

** Generated by CodeLite. **

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/assistant/CMakeLists.txt
+++ b/assistant/CMakeLists.txt
@@ -31,9 +31,9 @@ target_include_directories(assistantlib PUBLIC ${OLLAMLIB_ROOT})
 target_include_directories(assistantlib PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(assistantlib PUBLIC mcp-cpp)
 
-if (ASSISTANTLIB_WITH_OPENSSL)
+if (ASSISTANTLIB_WITH_OPENSSL OR ENABLE_TLS)
   target_compile_options(assistantlib PUBLIC -DCPPHTTPLIB_OPENSSL_SUPPORT=1)
-  target_link_libraries(assistantlib PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+  target_link_libraries(assistantlib PUBLIC OpenSSL::SSL OpenSSL::Crypto)
   if (WIN32)
     target_link_libraries(assistantlib PUBLIC Crypt32)
   endif ()
