Add Environment Variable Expansion Support
Introduce a new `EnvExpander` class that provides environment variable expansion functionality for both strings and JSON objects. The implementation supports two variable formats: `${VAR_NAME}` and `$VAR_NAME`, with the ability to use either a provided environment map or the system environment.

The expander recursively traverses JSON structures (objects, arrays) and expands variables in all string values while leaving other data types unchanged. Non-existent variables are preserved in their original form rather than being removed or replaced with empty strings.

Comprehensive test coverage includes edge cases such as missing closing braces, dollar signs at string boundaries, non-alphanumeric characters, consecutive variables, nested JSON structures, and cross-platform system environment access.

* Core implementation in `assistant/EnvExpander.cpp` and `assistant/EnvExpander.hpp`
* Test suite in `tests/test_env_expander.cpp` with 30+ test cases
* CMake integration for building and linking the new test executable

** Generated by CodeLite. **

Signed-off-by: Eran Ifrah <eran@codelite.org>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,11 +13,19 @@ include_directories(${CMAKE_SOURCE_DIR})
 # Create the test executable
 add_executable(test_claude_response_parser test_claude_response_parser.cpp)
 add_executable(test_history test_history.cpp)
+add_executable(test_env_expander test_env_expander.cpp)
 add_executable(test_process test_process.cpp)
 
 # Link libraries
 target_link_libraries(
   test_claude_response_parser
+  PUBLIC assistantlib
+         gtest
+         gtest_main
+         Threads::Threads)
+
+target_link_libraries(
+  test_env_expander
   PUBLIC assistantlib
          gtest
          gtest_main
