--- a/assistant/CMakeLists.txt
+++ b/assistant/CMakeLists.txt
@@ -22,6 +22,8 @@ add_library(
   ${CMAKE_CURRENT_LIST_DIR}/config.hpp
   ${CMAKE_CURRENT_LIST_DIR}/Curl.cpp
   ${CMAKE_CURRENT_LIST_DIR}/Curl.hpp
+  ${CMAKE_CURRENT_LIST_DIR}/EnvExpander.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/EnvExpander.hpp
   ${CMAKE_CURRENT_LIST_DIR}/claude_response_parser.cpp
   ${CMAKE_CURRENT_LIST_DIR}/claude_response_parser.hpp
   ${CMAKE_CURRENT_LIST_DIR}/Process.cpp
